# sequence-jacobian

./: .gitignore  LICENSE  README.md  asymptotic.py  dcblock.py  dcblock_test.py  determinacy.py  estimation.py  hank.ipynb  hank.py  hank_fiscal.py  het_block.py  het_jacobian.ipynb  jacobian.py  krusell_smith.ipynb  krusell_smith.py  nesting_test.py  nonlinear.py  pyproject.toml  rbc.ipynb  rec_block.py  remap_test.py  requirements.txt  setup.cfg  setup.py  simple_block.py  single_endo.py  solved_block.py  solvers.py  test_solved_block.py  toeplitz.py  two_asset.ipynb  two_asset.py  utils.py
.github/workflows/: main.yml
docs/: hank.html  het_jacobian.html  index.md  krusell_smith.html  rbc.html  two_asset.html
notebooks/: estimate_hank.ipynb  estimation_demo.ipynb  hank.html  hank.ipynb  het_jacobian.ipynb  intro_to_sequence_jacobian.ipynb  krusell_smith.html  krusell_smith.ipynb  labor_search.html  labor_search.ipynb  pymc_test.ipynb  rbc.html  rbc.ipynb  two_asset.html  two_asset.ipynb
sequence-jacobian/: nonlinear.py  utils.py
sequence-jacobian/blocks/: solved_block.py
sequence_jacobian/: __init__.py  aliases.py  asymptotic.py  base.py  calibration.py  determinacy.py  estimation.py  jacobian.py  model_dag.py  nonlinear.py  primitives.py  steady_state.py  utils.py
tests/: README.md  __init__.py  conftest.py  couple_endo.py  dcblock_test.py  remap_test.py  single_endo.py  test_determinacy.py  test_displacement_handlers.py  test_estimation.py  test_jacobian.py  test_steady_state.py  test_transitional_dynamics.py  test_two_asset.py
tests/base/: __init__.py  (+19 more)
(+132 files in other folders)
