[metadata]
name = sequence-jacobian
version = 1.0.0
author = Sequence-Jacobian Team
author_email = SequenceJacobianTeam@gmail.com
description = Sequence-Space Jacobian Methods for Solving and Estimating Heterogeneous Agent Models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shade-econ/sequence-jacobian
project_urls =
    Bug Tracker = https://github.com/shade-econ/sequence-jacobian/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src